--- a/Assigments-Exercises/CSS-Assigments/CSS-4/CSS4.html
+++ b/Assigments-Exercises/CSS-Assigments/CSS-4/CSS4.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS4.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <title>Flexbox Layout</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flexbox Layout</title>
+  <link rel="stylesheet" href="CSS4.css" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&family=Source+Sans+3&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <h1>Web Development Basics</h1>
-    <p id="subtitle">Start your journey here!</p>
+  <h1>Web Development Basics</h1>
+  <p id="subtitle">Start your journey here!</p>
 
-    <div class="flexboxContainer">
+  <div class="flexboxContainer">
 
-            <div id = "box1">
-                <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">
-
-                    <img src="./images/logoHtml.png" alt="html logo.png">
-                    <p>HTML or Hyper-text Markup Language. It is the standard markup language for creating Web pages.</p>
-                </a>
-            </div>
-
-            <div id = "box2">
-                <a href="https://www.w3schools.com/css/default.asp" target="_blank">
-
-                    <img src="./images/logoCss.png" alt="html logo.png">
-                    <p>CSS stands for Cascading Style Sheets. It is the language we use to style a Web page.</p>
-                </a>
-            </div>
-
-            <div id = "box3">
-                <a href="https://www.w3schools.com/js/default.asp" target="_blank">
-                    <img src="./images/logoJs.png" alt="html logo.png">
-                    <p>JavaScript is the programming language for web. It can calculate, manipulate and validate data.</p>
-                </a>
-            </div>
-            
+    <div id="box1">
+      <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">
+        <img src="logoHtml.png" alt="HTML Logo" />
+        <p>HTML or Hypertext Markup Language is the foundation of every website, used to create page structure.</p>
+      </a>
     </div>
-        
+
+    <div id="box2">
+      <a href="https://www.w3schools.com/css/default.asp" target="_blank">
+        <img src="logoCss.png" alt="CSS Logo" />
+        <p>CSS stands for Cascading Style Sheets, used to design and style the appearance of web pages.</p>
+      </a>
+    </div>
+
+    <div id="box3">
+      <a href="https://www.w3schools.com/js/default.asp" target="_blank">
+        <img src="logoJs.png" alt="JavaScript Logo" />
+        <p>JavaScript adds interactivity and dynamic behavior to websites through powerful scripting.</p>
+      </a>
+    </div>
+
+  </div>
 </body>
 </html>
